--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ssr",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,8 +11,9 @@
   "dependencies": {
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.16.3",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "marked": "^0.3.6",
-    "polyfill": "^0.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
