--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
-    "babel-register": "^6.16.3",
-    "body-parser": "^1.15.2",
+    "ejs": "^2.5.2",
     "express": "^4.14.0",
-    "marked": "^0.3.6",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
-    "redux": "^3.6.0"
+    "react-router": "^2.8.1"
+  },
+  "devDependencies": {
+    "babel-loader": "^6.2.5",
+    "http-server": "^0.9.0",
+    "webpack": "^1.13.2"
   }
 }
